# fabric

./: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
lib/: Cargo.toml
lib/src/: lib.rs  process.rs  sys_result.rs
lib/src/arch/x86_64/: mod.rs  raw.rs
lib/src/arch/x86_64/public/: framebuffer.rs  mod.rs
src/: builtins.rs  log.rs  main.rs
src/arch/x86_64/: instr.rs  kernel_stack.rs  mod.rs  process.rs  public.rs  raw.rs  serial.rs
src/arch/x86_64/boot/limine/: mod.rs  raw.rs  req.rs
src/arch/x86_64/cpu/: apic.rs  exceptions.rs  gdt.rs  idt.rs  mod.rs  paging.rs
src/arch/x86_64/mem/: boot_allocator.rs  memory_tracker.rs  mod.rs
src/arch/x86_64/syscall/: handlers.rs  mod.rs
src/utility/: epoch_mutex.rs  fmt.rs  mod.rs
targets/: x86_64.ld
